<resources>
    <string name="app_name">Application Demo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open fragment</string>
    <string name="navigation_drawer_close">Close fragment</string>

    <string name="a1">Screen Lock requires adminstration to be activated.</string>
    <string name="a2">Click button below register Activate Device Admin</string>
    <string name="a3">Enable</string>
    <string name="a4">Click button below remove register Activate Device Admin.</string>
    <string name="a5">Disable</string>
    <string name="a6">If you can feel useful, pleased let rate 5_stars for me!</string>
    <string name="a7">Rate and Review</string>
    <string name="a8">There are many very good app similar, you can try .......! </string>
    <string name="a9">More App</string>
    <string name="a10">Note: Let Disable before Unistall This App </string>
    <string name="action_settings">Lockscreen</string>
    <string name="hello_world">Android Lock Screen Demo</string>
    <string name="LockScreen">Lockscreen</string>


</resources>
