<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LockScreen"
    android:background="#141515" 
     >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                 android:layout_marginBottom="5dp"
                android:layout_weight="0.20"
                android:text="@string/a1"
                android:textColor="#C4C3C2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/a2"
                android:textColor="#EB0000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnEnable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/custom_button"
                android:text="@string/a3"
                android:textSize="20sp" 
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                
                android:layout_marginTop="20dp"
                android:text="@string/a4"
                android:textColor="#EB0000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnDisable"
                 android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/a5"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/a6"
                android:textColor="#C4C3C2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnRate"
               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/a7"
                android:textSize="20sp"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/a8"
                android:textColor="#C4C3C2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnMoreApp"
                 android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/a9"
                android:textSize="20sp"
                android:textColor="#FFFFFF" />
            
             <TextView
                android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/a10"
                android:textColor="#0000B7"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>

          <!--  <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true" >

                <com.google.ads.AdView
                    android:id="@+id/ad1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    ads:adSize="BANNER"
                    ads:adUnitId="ca-app-pub-5138386891075539/4642087603"
                    ads:loadAdOnCreate="true"
                    ads:testDevices="TEST_EMULATOR,TEST_DEVICE_ID_GOES_HERE" >
                </com.google.ads.AdView>
            </RelativeLayout>-->
</RelativeLayout>